<resources>
    <string name="app_name">走酷</string>
    <string name="info_title">请完善个人信息</string>
    <string name="action_settings">Settings</string>
    <string name="mine_title">我的</string>
    <string name="data_today">今日</string>
    <string name="mine_photo">我的照片</string>
    <string name="notify_title">通知中心</string>
    <string name="report_title">报告</string>
    <string name="title_activity_step_data">StepDataActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="step_data_histort">历史</string>
    <string name="step_data_today">今日</string>
    <string name="title_activity_step_setting">StepSettingActivity</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="appname">走酷</string>
    <string name="appsex_man">M</string>
    <string name="appsex_women">F</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="enter">进入应用</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="select_mob">选填</string>
    <string name="suggest_mob">填写手机号方便找回密码</string>
    <string name="regist_user">邮箱</string>
    <string name="register_pwd">密码</string>
    <string name="regist_mob_hint">手机号或邮箱</string>
    <string name="new_email">输入新邮箱</string>
    <string name="next">下一步</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="last">上一步</string>
    <string name="finish">完成</string>
    <string name="suggest_sports">根据您的个人健康情况为您推荐专属每日运动目标</string>
    <string name="all_steps">总步数</string>
    <string name="step">步</string>
    <string name="fast_steps">快步走</string>
    <string name="fire_cal">消耗热量</string>
    <string name="cal_unit">千卡</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="trouble1">冠心病</string>
    <string name="trouble2">糖尿病</string>
    <string name="trouble3">肥胖症</string>
    <string name="trouble4">消瘦症</string>
    <string name="trouble_none">无</string>
    <string name="have_trouble">是否患有这些疾病？</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="reset_mid">注册账号</string>
    <string name="forget_pwd">找回密码</string>
    <string name="suggest_sport">运动目标</string>
    <string name="mine_item1">通知中心</string>
    <string name="mine_item2">报告</string>
    <string name="mine_item3">设置</string>
    <string name="email">邮箱：</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="person_center">个人中心</string>
    <string name="info_refresh_pictrue">点此更换头像</string>
    <string name="info_item1">昵称</string>
    <string name="info_item2">性别</string>
    <string name="info_item3">年龄</string>
    <string name="info_item4">身高</string>
    <string name="info_item5">体重</string>
    <string name="info_item6">地区</string>
    <string name="bind_item1">绑定手机</string>
    <string name="bind_item2">绑定微信</string>
    <string name="bind_item3">绑定QQ</string>
    <string name="bind_item_email">邮箱</string>
    <string name="bind_item4">修改密码</string>
    <string name="picker_age">岁</string>
    <string name="picker_height">厘米</string>
    <string name="picker_weight">公斤</string>
    <string name="reset_secrit">找回密码</string>
    <string name="get_code">获取验证码</string>
    <string name="userid">您的注册邮箱或手机号</string>
    <string name="code">验证码</string>
    <string name="set_new_secret">确认新密码</string>
    <string name="set_secret">设置新密码</string>
    <string name="next_new_secret">确定新密码</string>
    <string name="dialog_reset_secret">您已经设置密码成功，请重新登录</string>
    <string name="name">昵称</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="pop_head_item0">拍照</string>
    <string name="pop_head_item1">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="steps">总步数</string>
    <string name="confirm">确定</string>
    <string name="setting">设置</string>
    <string name="setting_item1">后台计步功能</string>
    <string name="setting_item2">推荐</string>
    <string name="setting_item3">关于</string>
    <string name="setting_item4">升级</string>
    <string name="exit_login">退出登录</string>
    <string name="enter_name">请输入昵称</string>
    <string name="send_code">发送验证码</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_code">请输入验证码</string>
    <string name="bing_phone">绑定手机号</string>
    <string name="update_secret">修改密码</string>
    <string name="secret_item1">请输入原密码</string>
    <string name="secret_item2">请输入新密码</string>
    <string name="secret_item3">请再次输入新密码</string>
    <string name="nosetting">未设置</string>
    <string name="nobind">未绑定</string>
    <string name="send_time">s再次发送</string>
    <string name="confirm_secret">两次输入的新密码不一致</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_select_photo">SelectPhotoActivity</string>
    <string name="upfail">上传失败</string>
    <string name="getcode">获取验证码</string>
    <string name="title_activity_demo">Demo</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">关于</string>
    <string name="pedometer">计步器</string>
    <string name="follow">关注我们</string>
    <string name="selfdoctor_weixin">自达康微信公众号</string>
    <string name="selfdoctor_weibo">"自达康微博"</string>
    <string name="copyright">版权所有  自达康（北京）科技有限公司</string>
    <string name="user_protocol">用户使用协议</string>
    <string name="type">android</string>
    <string name="distance">行走距离</string>
    <string name="duration">行走时长</string>
    <string name="low_step">快走最低时速</string>
    <string name="high_step">快走最高时速</string>
    <string name="average_step">快走平均时速</string>
    <string name="faststeps">快步走</string>
    <string name="totalsteps">总步数</string>
    <string name="cal">消耗热量</string>
    <string name="unit_m">米</string>
    <string name="sport">适合户外运动</string>
    <string name="weather">晴</string>
    <string name="city">北京</string>
    <string name="sportsweather">运动</string>
    <string name="title_activity_anim">AnimActivity</string>
    <string name="uid">邮箱或手机号或卡号</string>
    <string name="et_limit">&#38;1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM~·!@#$%^*()-+_=/\:;,.?&lt;&gt; &quot;&#160;</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="zouku_protocol">用户使用协议</string>
    <string name="title_activity_leader">LeaderActivity</string>
    <string name="pronm">走酷</string>
    <string name="misspphone">手机号码或邮箱不能为空</string>
    <string name="validcode">验证码不能为空</string>
    <string name="wangluoyic">网络异常</string>
    <string name="next_exit">再按一次退出程序</string>
    <string name="notify">通知</string>
    <string name="getweatherloser">获取天气失败</string>
    <string name="getvalidloser">获取验证码失败</string>
    <string name="scritisnull">密码不能为空</string>
    <string name="newpwdisnull">新密码不能为空</string>
    <string name="oldpwdisnull">旧密码不能为空</string>
    <string name="minpwdlen">新密码不能少于6位</string>
    <string name="validcderror">验证码错误</string>
    <string name="updatedevlose">解绑设备失败</string>
    <string name="userpwdloser">用户名或密码错误</string>
    <string name="updatedev">已有绑定设备是否解除绑定？</string>
    <string name="logionerror">已有绑定设备是否解除绑定？</string>
    <string name="phoneerror">手机号码错误</string>
    <string name="noaddress">无法获取地理位置</string>
    <string name="hismore">更多历史数据请查看人人健康网</string>
    <string name="emptylist">暂无通知</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="noupdate">(已是最新版)</string>
    <string name="userpwderror">用户名或密码不能为空</string>
    <string name="autologinerror">已有绑定设备请先解绑</string>
    <string name="phone">手机</string>
    <string name="mima">密码</string>
    <string name="sendcodeloser">发送验证码失败</string>
    <string name="recommend">推荐</string>
    <string name="dongziyou">动自由</string>
    <string name="dongziyou_text">健康伴我行，健康动自由</string>
    <string name="dongziyou_bottom">(请到各大应用商店下载)</string>
    <string name="share_success">分享成功</string>
    <string name="nofindpic">找到图片</string>
    <string name="filemiss">文件不存在</string>
    <string name="phoneempty">手机号码不能为空</string>
    <string name="hint">提示</string>
    <string name="altertitle">为了更好的使用app,请打开以下权限：</string>
    <string name="huawei">为了您正常使用计步功能，运动时请打开走酷</string>
    <string name="read_protocol">用户使用协议</string>
    <string name="not_name">昵称不能为空</string>
    <string name="not_secret">密码不能为空</string>
    <string name="limit_mlength">密码长度必须为6～20位</string>
    <string name="mismid">请输入邮箱或手机号</string>
    <string name="zhuceremind">使用手机号注册时，点击获取验证码按钮</string>
    <string name="error_code">验证码错误</string>
    <string name="errorpic">请选择正确的图片格式</string>
    <string name="bind_dev_error">绑定设备失败</string>
    <string name="check_dev_error">检测设备失败</string>
    <string name="binddev">计步设备绑定</string>
    <string name="no_bind">未绑定</string>
    <string name="has_bind">已绑定</string>
    <string name="bind_title">请填写设备序列号</string>
    <string name="unbind_title">您的设备序列号:</string>
    <string name="btn_unbind">解绑</string>
    <string name="loseer">失败</string>
    <string name="sharesuceess">分享成功</string>
    <string name="mine_item4">常见问题</string>
    <string name="notifycenter">通知中心</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="out_msg">确定要退出吗？</string>
    <string name="bing_email">绑定邮箱</string>
    <string name="valid_email">验证邮箱</string>
    <string name="email_error">邮箱不能正确</string>
    <string name="code_error">验证码不正确</string>
    <string name="emailcdinvalid">邮箱或验证码不正确</string>
    <string name="phoneinvalid">手机或验证码不正确</string>
    <string name="phone_error">手机号码不正确</string>
    <string name="valid_phone">验证手机号</string>
    <string name="hasbind">已绑定</string>
    <string name="menu_settings">项目1</string>
    <string name="menu_about">项目1</string>
    <string name="menu_quit">项目1</string>
    <string name="talktitle">聊天</string>
    <string name="searchtalk">搜索</string>
    <string name="title_activity_mail_list">MailListActivity</string>
    <string name="title_activity_talk_search_man">TalkSearchManActivity</string>
    <string name="newfriends">新的朋友</string>
    <string name="me">我</string>
    <string name="talk_search_title">查找</string>
    <string name="title_activity_talking">TalkingActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="addfriendbtntxt">加为好友</string>
    <string name="title_activity_new_friend">NewFriendActivity</string>
    <string name="acceptnm">接受</string>
    <string name="mail">通讯录</string>
    <string name="searchisnull">搜索内容不能为空</string>
    <string name="addsuccess">添加朋友成功</string>
    <string name="sendsccess">发送成功</string>
    <string name="senderror">发送失败</string>
    <string name="isfriend">已经是您的好友</string>
    <string name="adderror">不存在</string>
    <string name="title_activity_new_friend_apply">NewFriendApplyActivity</string>
    <string name="friendapply">好友验证</string>
    <string name="addremind">你需要发送验证申请,等待对方通过</string>
    <string name="btn_send_msg">发送</string>
    <string name="searchhit">昵称</string>
    <string name="helloworld">您好我们可以聊天啦....</string>
    <string name="hasadd">已添加</string>
    <string name="sendmsgloser">失败</string>
    <string name="sendmsgisempty">发送的内容不能为空</string>
    <string name="success">成功</string>
    <string name="isyourself">不能添加自己</string>
    <string name="wasyourfriend">已经是您的好友</string>
    <string name="zhidingstr">置顶聊天</string>
</resources>