<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_title_height"
        android:background="@drawable/bg_titlebar" >

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="@color/title_text"
            android:textSize="@dimen/action_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical"
        android:paddingBottom="60dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_trouble"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/trouble1"
                    android:textSize="@dimen/stepdata" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/trouble2"
                    android:textSize="@dimen/stepdata" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/trouble_none"
                    android:textSize="@dimen/stepdata" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bt_last"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bt_red"
                android:text="@string/last"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_next"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bt_red"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>