<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/edit_stroke"
     >

    <TextView
        android:id="@+id/bindtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bind_title"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/bindnumber"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_edit_text"
        android:paddingLeft="10dp"
        android:digits="@string/et_limit"
        android:singleLine="true"
        android:maxLength="40">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp" > 
        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_bt_normal" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:background="@drawable/bg_bt_blue" />
    </LinearLayout>

</LinearLayout>