<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_actionbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/info_title"
            android:textColor="@color/title_text"
            android:textSize="@dimen/action_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical"
        android:paddingBottom="60dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="30sp" />

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <view.PickerView
                    android:id="@+id/pv_age"
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center" />
                

                
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bt_last"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bt_red"
                android:text="@string/last"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_next"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bt_red"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>